@@ -2,6 +2,7 @@
 using System.Runtime.Serialization;
 using Terraria;
 using Terraria.ID;
+using Terraria.Localization;
 using Terraria.ModLoader.Config;
 
 namespace BrighterLight
@@ -38,12 +39,12 @@ namespace BrighterLight
 			return NetMessage.DoesPlayerSlotCountAsAHost(whoAmI);
 		}
 
-		public override bool AcceptClientChanges(ModConfig pendingConfig, int whoAmI, ref string message)
+		public override bool AcceptClientChanges(ModConfig pendingConfig, int whoAmI, ref NetworkText message)
 		{
 			if (Main.netMode == NetmodeID.SinglePlayer) return true;
 			else if (!IsPlayerLocalServerOwner(whoAmI))
 			{
-				message = BrighterLight.AcceptClientChangesText.Format();
+				message = NetworkText.FromKey("tModLoader.ModConfigRejectChangesNotHost");
 				return false;
 			}
 			return base.AcceptClientChanges(pendingConfig, whoAmI, ref message);
