@@ -1,9 +1,9 @@
-en-US, 8/8, 100%, missing 0
-de-DE, 0/8, 0%, missing 8
-it-IT, 0/8, 0%, missing 8
-fr-FR, 0/8, 0%, missing 8
-es-ES, 0/8, 0%, missing 8
-ru-RU, 8/8, 100%, missing 0
-zh-Hans, 0/8, 0%, missing 8
-pt-BR, 0/8, 0%, missing 8
-pl-PL, 0/8, 0%, missing 8
+en-US, 7/7, 100%, missing 0
+de-DE, 0/7, 0%, missing 7
+it-IT, 7/7, 100%, missing 0
+fr-FR, 0/7, 0%, missing 7
+es-ES, 0/7, 0%, missing 7
+ru-RU, 7/7, 100%, missing 0
+zh-Hans, 0/7, 0%, missing 7
+pt-BR, 0/7, 0%, missing 7
+pl-PL, 0/7, 0%, missing 7
