@@ -28,8 +28,6 @@ Mods: {
 						'''
 				}
 			}
-
-			Common.AcceptClientChanges: Only the host of this world can change the config! Do so in singleplayer.
 		}
 	}
 }
