@@ -28,8 +28,6 @@ Mods: {
 						'''
 				}
 			}
-
-			Common.AcceptClientChanges: Только владелец этого мира может менять настройки! Смените настройки в одиночной игре.
 		}
 	}
 }
