@@ -1,5 +1,5 @@
 author = direwolf420
-version = 1.2.0.1
+version = 1.2.0.2
 displayName = Brighter Light
 hideCode = false
 hideResources = false
